sidebar bug fix

--- a/src/sidebar/sidebar.css
+++ b/src/sidebar/sidebar.css
@@ -44,7 +44,7 @@
   margin-top: 15px;
   cursor: pointer;
 }
-.sidebarSocial {
+.sidebarSocialContainer {
   margin-top: 15px;
   width: 250px;
   display: flex;
