--- a/client/src/components/singlePost/singlePost.css
+++ b/client/src/components/singlePost/singlePost.css
@@ -4,6 +4,9 @@
 .singlePostWrapper {
   padding: 20px;
   padding-right: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .singlePostImg {
   width: 100%;
@@ -16,6 +19,18 @@
   margin: 10px;
   font-family: "Lora", serif;
   font-size: 28px;
+}
+.singlePostTitleInput {
+  margin: 10px;
+  font-family: "Lora", serif;
+  font-size: 28px;
+  text-align: center;
+  border: none;
+  border-bottom: 1px solid lightgray;
+  color: gray;
+}
+.singlePostTitleInput:focus {
+  outline: none;
 }
 .singlePostEdit {
   float: right;
@@ -44,8 +59,27 @@
   font-size: 18px;
   line-height: 25px;
 }
+.singlePostDescInput {
+  border: none;
+  border-bottom: 1px solid lightgray;
+  color: gray;
+}
+.singlePostDescInput:focus {
+  outline: none;
+}
 .singlePostDesc::first-letter {
   margin-left: 20px;
   font-size: 30px;
   font-weight: 600;
+}
+.singlePostButton{
+  border: none;
+  background-color: teal;
+  padding: 5px;
+  width: 100px;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+  align-self: flex-end;
+  margin-top: 20px;
 }
